spliting about me in two columns

--- a/index.html
+++ b/index.html
@@ -92,37 +92,28 @@
 <!-- About Section -->
 <section id="about" class="bg-black">
 	<div class="container content-section text-center">
+
 		<div class="row">
-        	<div class="col-lg-12 text-center">
-                <h1 class="section-heading" style="color:white"><span class="fa-stack fa-2x">
-                    	<i class="fa fa-user fa-stack-1x fa"></i></a>
-                	</span>Who am I?</h1>
-            </div>
-        </div>
-		<div class="row" style="padding-left: 10px; padding-right: 10px;">
-			<div class="col-lg-8 col-lg-offset-2">
-				<p class="text-left" style="color:#FFFFFF">
-					I am a User Experience Designer based in Eindhoven, The Netherlands, currently working within <a target="_blank" href="http://usitue.nl/trainees" style="color:#00BF00">the User System Interaction program at TU/e</a>. As an addition to my UX skills, I have a Biomedical and Electrical Engineering background.
+			<div class="col-lg-4 col-lg-offset-1 text-center">
+				<h1 class="section-heading" style="color:white">
+					Who am I?
+				</h1>
+				<p class="text-center" style="color:#FFFFFF">
+					I am a User Experience Designer based in Eindhoven, The Netherlands, currently working within <a target="_blank" href="http://usitue.nl/trainees" style="color:#00BF00">the User System Interaction program at TU/e</a>. In addition to my UX skills, I have a Biomedical and Electrical Engineering background.
 					<br>
 				</p>
 			</div>
-		</div>
-		<div class="row" style="padding-top: 4em; padding-bottom: 0em">
-        	<div class="col-lg-12 text-center">
-                <h1 class="section-heading" style="color:white"><span class="fa-stack fa-2x">
-                    	<i class="fa fa-eye fa-stack-1x fa"></i></a>
-                	</span>My vision</h1>
-            </div>
-        </div>
-		<div class="row" style="padding-left: 10px; padding-right: 10px;">
-			<div class="col-lg-8 col-lg-offset-2">
-				<p class="text-left" style="color:#FFFFFF">
+			<div class="col-lg-4 col-lg-offset-1 text-center">
+				<h1 class="section-heading" style="color:white">
+					My vision
+				</h1>
+				<p class="text-center" style="color:#FFFFFF">
 					As a UX designer, I am inspired to explore new ideas that can empower people's life. With a user-centered approach, my purpose is to meet users needs with business goals, to design a successful product.
 					<br>
 				</p>
 			</div>
 		</div>
-		<div class="row" style="padding-top: 4em; padding-bottom: 0em">
+		<!--div class="row" style="padding-top: 4em; padding-bottom: 0em">
         	<div class="col-lg-12 text-center">
                 <h1 class="section-heading" style="color:white"><span class="fa-stack fa-2x">
                     	<i class="fa fa-spinner fa-stack-1x fa"></i></a>
@@ -132,7 +123,6 @@
 		<div class="row col-lg-10 col-lg-offset-1"  style="color:white; padding-left: 10px; padding-right: 10px; padding-bottom: 4em;">   
             <div class="col-md-3" >
                 <span class="fa-stack fa-4x">
-                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Planning & Strategy</h4>
@@ -140,7 +130,6 @@
             </div>  
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
-                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-users fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Research & Ideation</h4>
@@ -148,7 +137,6 @@
             </div> 
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
-                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-rocket fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Prototype & Testing</h4>
@@ -156,14 +144,13 @@
             </div>
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
-                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-line-chart fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Analysis & Reflection</h4>
                 <p class="text">Signal Processing, Data Analytics, Data Visualization, Hypothesis Testing, Statistics</p>
             </div>  
-        </div>
-		<div class="row">
+        </div-->
+		<div class="row" style="padding-top: 2em;">
 			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
 		</div>
 	</div>
