--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
 <section id="about" class="bg-black">
 	<div class="container content-section text-center">
 		<div class="row" style="border-color:white">
-			<div class="col-lg-4 col-lg-offset-1 text-center">
+			<div class="col-sm-1 col-md-1 text-center">
+			</div>
+			<div class="col-sm-5 col-md-4 text-center">
 				<h1 class="section-heading" style="color:white">
 					Who am I?
 				</h1>
@@ -102,7 +104,9 @@
 					<br>
 				</p>
 			</div>
-			<div class="col-lg-4 col-lg-offset-1 text-center">
+			<div class="col-sm-0 col-md-2 text-center">
+			</div>
+			<div class="col-sm-5 col-md-4 text-center myvision">
 				<h1 class="section-heading" style="color:white">
 					My vision
 				</h1>
@@ -110,6 +114,8 @@
 					As a UX designer, I am inspired to explore new ideas that can empower people's life. With a user-centered approach, my purpose is to meet users needs with business goals, to design a successful product.
 					<br>
 				</p>
+			</div>
+			<div class="col-sm-1 col-md-1 text-center">
 			</div>
 		</div>
 		<!--div class="row" style="padding-top: 4em; padding-bottom: 0em">
