--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation -->
-<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-custom navbar-fixed-top fade-in" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -122,6 +122,115 @@
 <section id="projects" class="">
 	<div class="container content-section text-center">
 		<div class="row" style="border-color:white">
+			<div class="col-lg-10 col-lg-offset-1 text-center">
+				<h1 class="section-heading" style="color:black">
+					My projects
+				</h1>
+			</div>
+		</div>
+		<div class="row" style="border-color:white">
+			<div class="container gal-container">
+			    <div class="col-md-8 col-sm-12 co-xs-12 gal-item">
+			      <div class="box">
+			        <a href="#" data-toggle="modal" data-target="#1">
+			          <img src="http://nabeel.co.in/files/bootsnipp/gallery/1.jpg">
+			        </a>
+			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
+			          <div class="modal-dialog" role="document">
+			            <div class="modal-content">
+			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+			              <div class="modal-body">
+			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/1.jpg">
+			              </div>
+			                <div class="col-md-12 description">
+			                  <h4>This is the first one on my Gallery</h4>
+			                </div>
+			            </div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+			    <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
+			      <div class="box">
+			        <a href="#" data-toggle="modal" data-target="#2">
+			          <img src="http://nabeel.co.in/files/bootsnipp/gallery/2.jpg">
+			        </a>
+			        <div class="modal fade" id="2" tabindex="-1" role="dialog">
+			          <div class="modal-dialog" role="document">
+			            <div class="modal-content">
+			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+			              <div class="modal-body">
+			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/2.jpg">
+			              </div>
+			                <div class="col-md-12 description">
+			                  <h4>This is the second one on my Gallery</h4>
+			                </div>
+			            </div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+			    <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
+			      <div class="box">
+			        <a href="#" data-toggle="modal" data-target="#3">
+			          <img src="http://nabeel.co.in/files/bootsnipp/gallery/3.jpg">
+			        </a>
+			        <div class="modal fade" id="3" tabindex="-1" role="dialog">
+			          <div class="modal-dialog" role="document">
+			            <div class="modal-content">
+			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+			              <div class="modal-body">
+			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/3.jpg">
+			              </div>
+			                <div class="col-md-12 description">
+			                  <h4>This is the third one on my Gallery</h4>
+			                </div>
+			            </div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+			    <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
+			      <div class="box">
+			        <a href="#" data-toggle="modal" data-target="#4">
+			          <img src="http://nabeel.co.in/files/bootsnipp/gallery/4.jpg">
+			        </a>
+			        <div class="modal fade" id="4" tabindex="-1" role="dialog">
+			          <div class="modal-dialog" role="document">
+			            <div class="modal-content">
+			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+			              <div class="modal-body">
+			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/4.jpg">
+			              </div>
+			                <div class="col-md-12 description">
+			                  <h4>This is the fourth one on my Gallery</h4>
+			                </div>
+			            </div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+			    <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
+			      <div class="box">
+			        <a href="#" data-toggle="modal" data-target="#5">
+			          <img src="http://nabeel.co.in/files/bootsnipp/gallery/5.jpg">
+			        </a>
+			        <div class="modal fade" id="5" tabindex="-1" role="dialog">
+			          <div class="modal-dialog" role="document">
+			            <div class="modal-content">
+			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+			              <div class="modal-body">
+			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/5.jpg">
+			              </div>
+			                <div class="col-md-12 description">
+			                  <h4>This is the fifth one on my Gallery</h4>
+			                </div>
+			            </div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+    		</div>
 		</div>
 	</div>
 </section>
