last modifications / projects and test version

--- a/work/aac/index.html
+++ b/work/aac/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Engage seniors to (re)establish food-related habits</title>
+<title>AAC</title>
 <!-- Bootstrap Core CSS -->
 <link href="../../css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -72,55 +72,53 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<div class="row">
-					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">De Kooktafel: engage seniors to establish food-related habits</h2>
+					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">AAC for people with severe motor dysfunction</h1>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
 						<p class="text-left" style="font-size: 1.1em">
 							<b>Clients</b><br>
-							<a href="http://reach2020.eu"> Reach 2020 (Europe)</a><br>
-							<a href="">TU München (Germany)</a><br>
-							<a href="">TU Eindhoven (Netherlands)</a><br>
+							<a href="http://www.do-change.eu"> Univ. Hospital of Uberlândia (BR)</a><br>
+							<a href="https://onmi.design">University of Uberlândia (BR)</a><br>
+							<a href="">Université de Lorraine (FR)</a><br>
 							<br>
-							<b>Teamed up with</b><br>
-							Human-Factors Psychologist<br>
-							Industrial Designer<br>
-							Computer Scientist<br>
-							<br>
-							<b>July 17</b><br>
-							4 weeks<br>
+							<b>Team up with</b><br>
+							Computer Scientists<br>
+							Biomedical Engineers<br>
+							Electrical Engineers<br>
 							<br>
 						</p>
 					</div>
 					<div class="col-sm-8">
+
 						<div class="row text-left">
-							<div class="col-md-4">
+							<div class="col-md-3">
 							    <span class="fa-stack fa-3x">
 							       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							    	<i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
+							    	<i class="fa fa-users fa-stack-1x fa"></i>
 							    </span>
 							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Research</h4>
 							    <p style="color:#222; font-size: 1.1em">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p-->
 							     <p class="text-left" style="font-size: 1.1em">
-									<b>Strategy</b><br> 
-									Design sprint, Benchmarking
+									<b>Research</b><br> 
+									Task Analysis, Expert Review, Benchmarking<br>	
 									<br>
 								</p>
 							</div> 
-							<div class="col-md-4">
+							<div class="col-md-3">
 							    <span class="fa-stack fa-3x">
 							     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-users fa-stack-1x fa"></i>
+							        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
 							    </span>
 							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Define & Ideate</h4>
 							    <p style="color:#222; font-size: 1.1em">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p-->
 							     <p class="text-left" style="font-size: 1.1em">
-									<b>Research</b><br> 
-									Contextual Inquiry, Interview, Task Analysis, Affinity Diagram<br>	
+									<b>Define & Ideate</b><br> 
+									Stakeholder managment, Sketch<br>	
 									<br>
 								</p>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-3">
 							    <span class="fa-stack fa-3x">
 							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
 							        <i class="fa fa-rocket fa-stack-1x fa"></i>
@@ -128,8 +126,21 @@
 							   	<!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Prototype & Test</h4>
 							    <p style="color:#222`; font-size: 1.1em">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p-->
 							     <p class="text-left" style="font-size: 1.1em">
-									<b>Ideation, Prototype & Test</b><br> 
-									Sketch, Storyboard, Wizard of Oz, Usability Testing<br>	
+									<b>Prototype & Test</b><br> 
+									WPF Prototype, Usability Testing, Data Analysis<br>	
+									<br>
+								</p>
+							</div>
+							<div class="col-md-3">
+							    <span class="fa-stack fa-3x">
+							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+							        <i class="fa fa-bar-chart fa-stack-1x fa"></i>
+							    </span>
+							   	<!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Prototype & Test</h4>
+							    <p style="color:#222`; font-size: 1.1em">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p-->
+							     <p class="text-left" style="font-size: 1.1em">
+									<b>Analysis</b><br> 
+									Data analysis, Statistics, Hyphotesis testing<br>	
 									<br>
 								</p>
 							</div>
@@ -142,7 +153,7 @@
 </section>
 
 <!-- Intro Header -->
-<header class="intro reach">
+<header class="intro aac">
 	<div class="intro-body">
 		<div class="container">
 			<div class="row" style="padding-top: 20em">
@@ -182,92 +193,18 @@
 		<div class="row" style="padding-top: 30px">
 			<div class="col-lg-8 col-lg-offset-2 text-left">
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px; font-size:3em; ">What did <b>we do</b>?</h1>
-				<p>	During four weeks we:
-					<b>interviewed</b> seniors during a cooking activity;
-					clustered <b>qualitative data</b> from the contextual inquiry using <b>affinity diagram</b>;
-					answered business questions by following the <b>design sprint</b> method;
-					<b>prototyped</b> a cooking-aid using an interactive table, provided by TU München;
-					conducted <b>usability tests</b> with 8 users;
-					ran three <b>iterations</b> of the design process.
+				<p>	(1) Prototype User Interfaces on WPF for different modules of an augmentative and alternative communication software; (2) Prototype input devices to control the system using accelerometers, eye-trackers, switches, electromyography; (3) Plan and execute user tests; (4) Data analysis based on user activity log.
 				</p>
 			</div>
 		</div>
-
-		<!--Photos-->
-		<!--div class="row" style="font-weight: normal; padding-top: 30px">
-			<div class="col-lg-8 col-lg-offset-2 text-left">
-				<div class="row no-gutter popup-gallery">
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="st.html">
-			              	<img class="img-fluid" src="img/userresearch.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="st.html">
-			              	<img class="img-fluid" src="img/mapping.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		        </div>
-		        <div class="row no-gutter popup-gallery" style="font-weight: normal; padding-top: 30px">
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="st.html">
-			              	<img class="img-fluid" src="img/ideation.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="st.html">
-			              	<img class="img-fluid" src="img/flow.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		        </div>
-		        <div class="row no-gutter popup-gallery" style="font-weight: normal; padding-top: 30px">
-			        <div class="col-sm-6">
-			           	<a class="portfolio-box" href="st.html">
-				            <img class="img-fluid" src="img/prototyping.png" alt="">
-				            <div class="portfolio-box-caption">
-				                <div class="portfolio-box-caption-content">
-				                </div>
-				            </div>
-			            </a>	
-			        </div>
-			          	
-			        <div class="col-sm-6">
-			            <a class="portfolio-box" href="st.html">
-				            <img class="img-fluid" src="img/usertest.jpg" alt="">
-				            <div class="portfolio-box-caption">
-				                <div class="portfolio-box-caption-content">
-				                </div>
-				            </div>
-			            </a>	
-			        </div>
-		        </div>
-	       	</div>
-		</div-->
 
 		<!--What did we achieved by the end of the project-->
 		<div class="row" style="padding-top: 30px">
 			<div class="col-lg-8 col-lg-offset-2 text-left">
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px">What did <b>we achieved</b> by the end of the project?</h1>
 				<p>
-					At the end of the case, we provided a <b>prototype</b> to our stakeholders so that they can continue the next stage of the project. 
-					Reach Consortium have a prototype that can be applied in their context of use, like the Lokaal+ activity for instance.
-					From TU München side they were interested in the design implications that we <b>learned</b> by observing seniors using De Kooktafel during cooking activities. 
+					At the end of the case, we developed a prototype that allowed patients with ALS, hospitalized at the university hospital, to communicate with family members, caregivers and doctors. The different sensors allowed an easy customization for the users to control the communication software.
+			</h2>
 				</p>
 				<img class="img-fluid" src="img/usertest2.jpg" alt="">
 			</div>
@@ -283,81 +220,9 @@
 			</div>
 		</div>
 
-		<!--Photos-->
-		<!--div class="row" style="font-weight: normal; padding-top: 30px">
-			<div class="col-lg-8 col-lg-offset-2 text-left">
-		        <div class="row no-gutter popup-gallery">
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/st/overview.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/st/group.png" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		        </div>
-		        <div class="row no-gutter popup-gallery" style="font-weight: normal; padding-top: 30px">
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/st/uxcamp1.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/st/uxcamp2.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		        </div>
-	       	</div>
-		</div-->
-
-		<!--Photos-->
-		<!--div class="row" style="font-weight: normal; padding-top: 30px">
-			<div class="col-lg-8 col-lg-offset-2 text-left">
-		        <div class="row no-gutter popup-gallery">
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/group.png" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		          	<div class="col-sm-6">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/uxcamp1.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			             	 </div>
-		            	</a>	
-		          	</div>
-		        </div>
-	       	</div>
-		</div-->
-
 		<div class="row" style="border-color:white; padding-top: 30px">
-			<div class="container gal-container col-lg-12 col-lg-offset-0">
-			    <div class="col-md-8 col-sm-12 co-xs-12 gal-item filter ucd">
+			<div class="container gal-container col-lg-8 col-lg-offset-2 ">
+			    <div class="col-md-4 col-sm-12 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#1">
 			          <img src="http://nabeel.co.in/files/bootsnipp/gallery/1.jpg" class="img-responsive">
@@ -477,25 +342,6 @@
 			        </div>
 			      </div>
 			    </div>
-			    <div class="col-md-8 col-sm-12 co-xs-12 gal-item filter ucd">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#8">
-			          <img src="http://nabeel.co.in/files/bootsnipp/gallery/8.jpg" class="img-responsive">
-			        </a>
-			        <div class="modal fade" id="8" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/8.jpg">
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the first one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
     		</div>
 		</div>
 
