--- a/work/aac/_als1.html
+++ b/work/aac/_als1.html
@@ -8,11 +8,11 @@
 <meta name="author" content="">
 <title>AAC for people with severe motor dysfunction - Daniel Mariano</title>
 <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="../../bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
-<link href="css/theme.css" rel="stylesheet">
+<link href="../../css/theme.css" rel="stylesheet">
 <!-- Custom Fonts -->
-<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -291,101 +291,13 @@
 	</div>
 </section>
 
-<!-- Portfolio Grid Section -->
-<section id="portfolio" class="bg-white p-0">
-    <div class="container content-section text-center">
-    	<div class="row">
-    		<h1>Portfolio</h1>
-       		<div class="col-lg-8 col-lg-offset-2">
-      			<p style="margin-bottom: 30px">These are some of the works that I've been working recently.</p>
-       		</div>
-	        <div class="row no-gutter popup-gallery">
-	          	<div class="col-sm-6">
-	            	<a class="portfolio-box" href="st.html">
-		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
-		              	<div class="portfolio-box-caption">
-		                	<div class="portfolio-box-caption-content">
-		                		<h4 class="projname">Engage seniors to (re)establish food-related habits</h4>
-		                		<h6 class="projdesc">Interactive-Table, Cooking Aid, Prototype, User Test</h6>
-		                	</div>
-		             	 </div>
-		              	
-	            	</a>	
-	          	</div>
-		        <div class="col-sm-6">
-		            <a class="portfolio-box">
-		              	<img class="img-fluid" src="img/db/tb.png" alt="">
-		              	<div class="portfolio-box-caption">
-		                	<div class="portfolio-box-caption-content">
-		                		<h4 class="projname">Dashboard for Researchers</h4>
-		                		<h6 class="projdesc">IoT, Wearables, Data Analysis, Visualization</h6>
-		                	</div>
-		             	 </div>
-		             	
-		            </a>
-		        </div>
-		    </div>
-		    <div class="row no-gutter popup-gallery" style="padding-top: 30px">
-			    <div class="col-sm-6">
-			            <a class="portfolio-box" href="aac.html">
-			              	<img class="img-fluid" src="img/aac/tb.png" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                		<h4 class="projname">AAC for people with severe motor dysfunction</h4>
-		              		 		<h6 class="projdesc">ALS, AAC, .NET-based Prototype, User Test, Data Analysis</h6>
-			                	</div>
-			             	 </div>
-			            </a>
-			    </div>
-		        <div class="col-sm-6">
-		            <a class="portfolio-box">
-		              	<img class="img-fluid" src="img/icu/tb.png" alt="">
-		              	<div class="portfolio-box-caption">
-			                <div class="portfolio-box-caption-content">
-			                	<h4 class="projname">Multi-patient vital signs monitoring center for ICU's</h4>
-		              			<h6 class="projdesc">Healthcare, IoT, UI, Qt-based Prototype</h6>
-			                </div>
-			            </div>
-			        </a>
-		        </div>	
-		    </div>
-	    </div>
-    </div>
-</section>
-
-<!-- Contact Section -->
-<section id="contact" class="bg-white">
-	<div class="container content-section text-center">
-		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2">
-				<h1>Let's get in touch</h1>
-				<p>Send me a message!</p>
-				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
-				<p></p>
-				<ul class="list-inline banner-social-buttons">
-					<li>
-					<a href="https://github.com/dtgmariano" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-github fa-fw"></i><span class="network-name"> Github</span></a>
-					</li>
-					<li>
-					<a href="https://www.linkedin.com/in/danielmariano/" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-linkedin fa-fw"></i><span class="network-name"> LinkedIn</span></a>
-					</li>
-					<li>
-					<a href="https://twitter.com/dtgmariano" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name"> Twitter</span></a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</section>
-
-
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="../../js/jquery.js"></script>
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="../../js/bootstrap.min.js"></script>
 <!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
+<script src="../../js/jquery.easing.min.js"></script>
 <!-- Custom Theme JavaScript -->
-<script src="js/theme.js"></script>
+<script src="../../js/theme.js"></script>
 </body>
 </html>
