--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </nav>
 
 <!-- Intro Header -->
-<header id="header" class="intro intro-main">
+<header id="header" class="projects intro intro-main">
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
