--- a/test.html
+++ b/test.html
@@ -71,7 +71,7 @@
 </nav>
 
 <!-- Intro Header -->
-<header id="header" class="intro intro-main">
+<header id="header" class="intro hero intro-main">
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
