--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand page-scroll" href="index.html">Daniel Mariano</a>
+			<a class="navbar-brand page-scroll" href="test.html">Daniel Mariano</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -101,16 +101,18 @@
 <section id="about" class="bg-black">
 	<div class="container content-section text-center">
 		<div class="row" style="border-color:white">
-			<div class="col-lg-4 col-lg-offset-1 text-center">
+			<div class="col-sm-1 text-center"></div>
+			<div class="col-sm-4 text-center">
 				<h1 class="section-heading" style="font-size: 4em; color:white;">
 					Who am I?
 				</h1>
 				<p class="text-center" style="color:#FFFFFF">
-					I am an User Experience Designer based in Eindhoven, The Netherlands, currently working within <a target="_blank" href="http://usitue.nl/trainees" style="color:#00BF00">the User System Interaction program at TU/e</a>. In addition to my UX skills, I have a Biomedical and Electrical Engineering background.
+					I am a User Experience designer based in Eindhoven, The Netherlands, currently working within <a target="_blank" href="http://usitue.nl/trainees" style="color:#00BF00">the User System Interaction program at TU/e</a>. In addition to my UX skills, I have a Biomedical and Electrical Engineering background.
 					<br>
 				</p>
 			</div>
-			<div class="col-lg-4 col-lg-offset-1 text-center">
+			<div class="col-sm-2 text-center"></div>
+			<div class="col-sm-4 text-center">
 				<h1 class="section-heading" style="font-size: 4em; color:white">
 					My vision
 				</h1>
@@ -119,6 +121,7 @@
 					<br>
 				</p>
 			</div>
+			<div class="col-sm-1 text-center"></div>
 		</div>
 		<div class="row" style="padding-top: 2em;">
 			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
@@ -127,28 +130,28 @@
 </section>
 
 <!-- Projects Section-->
-<section id="projects" class="" style="background-color: #222">
+<section id="projects" class="" style="background-color: #FFF">
 	<div class="projects container content-section text-center">
-		<div class="row" style="border-color:white">
+		<div class="row" style="border-color:#333">
 			<div class="col-lg-8 col-lg-offset-2 text-center">
-				<h1 class="section-heading" style="color:white; font-size: 4em">
+				<h1 class="section-heading" style="color:#333; font-size: 4em">
 					My projects
 				</h1>
 			</div>
 		</div>
 		
-		<div class="row" align="center" style="padding-bottom: 2em;">
-            <button class="btn btn-default filter-button" data-filter="all">All</button>
-            <button class="btn btn-default filter-button" data-filter="ux">UX Design</button>
-            <button class="btn btn-default filter-button" data-filter="res">Research</button>
-            <button class="btn btn-default filter-button" data-filter="prot">Prototyping</button>
-            <button class="btn btn-default filter-button" data-filter="ut">User Testing</button>
+		<div class="row" align="center" style="padding-bottom: 2em; border-color:#333">
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="all">All</button>
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="ux">UX Design</button>
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="prot">Prototyping</button>
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="dev">Data Analysis</button>
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="dev">Development</button>
         </div>
 
 		<div class="row" style="border-color:white">
-			<div class="container gal-container">
+			<div class="container gal-container col-lg-8 col-lg-offset-2">
 				<!--Corbion-->
-				<div class="col-md-4 col-sm-6 co-xs-12 gal-item filter ucd">
+				<!--div class="col-md-4 col-sm-6 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#2">
 			          <img src="work\corbion\img\view.jpg" class="img-responsive">
@@ -167,12 +170,11 @@
 			          </div>
 			        </div>
 			      </div>
-			    </div>		
+			    </div-->		
 			    <!--Reach-->
-			    <div class="col-md-4 col-sm-12 co-xs-12 gal-item filter ucd">
+			    <div class="col-md-12 col-sm-12 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#1">
-			          <!--img src="http://nabeel.co.in/files/bootsnipp/gallery/1.jpg" class="img-responsive"-->
 			          <img src="work\reach\img\lokaalplus.jpg" class="img-responsive">
 			        </a>
 			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
@@ -180,7 +182,7 @@
 			            <div class="modal-content">
 			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
 			              <div class="modal-body">
-			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/1.jpg">
+			                <a href="work\reach\index.html"><img src="work\reach\img\lokaalplus.jpg"></a>
 			              </div>
 			                <div class="col-md-12 description">
 			                  <h4>This is the first one on my Gallery</h4>
@@ -191,7 +193,7 @@
 			      </div>
 			    </div>
 			    <!--Eventix-->
-			    <div class="col-md-4 col-sm-6 co-xs-12 gal-item filter data">
+			    <!--div class="col-md-4 col-sm-6 co-xs-12 gal-item filter data">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#4">
 			          <img src="work/eventix/img/tb2.jpg">
@@ -210,9 +212,9 @@
 			          </div>
 			        </div>
 			      </div>
-			    </div>
+			    </div-->
 			   	<!--DoChange-->
-			    <div class="col-md-4 col-sm-6 co-xs-12 gal-item filter ucd">
+			    <div class="col-md-6 col-sm-6 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#2">
 			          <img src="work\dochange\img\tb.jpg" style="background-color: black" class="img-responsive">
@@ -233,7 +235,7 @@
 			      </div>
 			    </div>
 			    <!--HCUFU-->
-			    <div class="col-md-4 col-sm-6 co-xs-12 gal-item filter ucd">
+			    <div class="col-md-6 col-sm-6 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#5">
 			          <img src="work/aac/img/patient.jpg">
@@ -254,7 +256,7 @@
 			      </div>
 			    </div>
 			    <!--Intel-->
-			    <div class="col-md-4 col-sm-6 co-xs-12 gal-item filter ucd">
+			    <!--div class="col-md-4 col-sm-6 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#5">
 			          <img src="work/intel/img/tb.png">
@@ -273,7 +275,7 @@
 			          </div>
 			        </div>
 			      </div>
-			    </div>
+			    </div-->
     		</div>
 		</div>
 	</div>
