--- a/test.html
+++ b/test.html
@@ -14,7 +14,10 @@
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">\
+
+<!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"-->
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -117,14 +120,14 @@
 					My vision
 				</h1>
 				<p class="text-center" style="color:#FFFFFF">
-					As a UX designer, I am inspired to explore new ideas that can empower people's life. With a user-centered approach, my purpose is to meet users needs with business goals, to design a successful product.
+					With a user-centered approach, I am inspired to explore new ideas that can empower people's lives. My purpose as a UX professional is to design successful products, satisfying both users' needs and business' expectations.
 					<br>
 				</p>
 			</div>
 			<div class="col-sm-1 text-center"></div>
 		</div>
 		<div class="row" style="padding-top: 2em;">
-			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
+			<a target="_blank" href="https://www.dropbox.com/s/aw9k62e74kp7her/mariano_resume_nov17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
 		</div>
 	</div>
 </section>
@@ -139,149 +142,68 @@
 				</h1>
 			</div>
 		</div>
-		
-		<div class="row" align="center" style="padding-bottom: 2em; border-color:#333">
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="all">All</button>
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="ux">UX Design</button>
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="prot">Prototyping</button>
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="dev">Data Analysis</button>
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="dev">Development</button>
-        </div>
 
+		<!--div class="container-fluid">
+			<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project wow animated animated4 fadeInLeft">
+		        <div class="project-hover">
+		        	<h2>TITLE</h2>
+		            
+		            <hr />
+		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
+		            <a href="#">See Project</a>
+		        </div>
+		    </div>
+			<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-2 wow animated animated3 fadeInLeft">
+		    	<div class="project-hover">
+		        	<h2>TITLE</h2>
+		            <hr />
+		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
+		            <a href="#">See Project</a>
+		        </div>
+		    </div>
+			<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-3 wow animated animated2 fadeInLeft">
+		    	<div class="project-hover">
+		        	<h2>TITLE</h2>
+		            <hr />
+		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
+		            <a href="#">See Project</a>
+		        </div>
+		    </div>
+			<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-4 wow animated fadeInLeft">
+		    	<div class="project-hover">
+		        	<h2>TITLE</h2>
+		            <hr />
+		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
+		            <a href="#">See Project</a>
+		        </div>
+		    </div>
+		    <div class="clearfix"></div>
+		</div-->
 		<div class="row" style="border-color:white">
-			<div class="container gal-container col-lg-8 col-lg-offset-2">
-				<!--Corbion-->
-				<!--div class="col-md-4 col-sm-6 co-xs-12 gal-item filter ucd">
+			<div class="container gal-container col-lg-10 col-lg-offset-1">
+				<div class="col-md-12 col-sm-6 co-xs-12 gal-item filter ux">
 			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#2">
-			          <img src="work\corbion\img\view.jpg" class="img-responsive">
-			        </a>
-			        <div class="modal fade" id="2" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <a href="work/reach/index.html"><img src="http://nabeel.co.in/files/bootsnipp/gallery/2.jpg"></a>
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>De Kooktafel</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
+			        <img class="filter smartdevice" src="work\corbion\img\view.jpg" class="img-responsive">
+			        <img class="filter kooktafel" src="work\corbion\img\view.jpg" class="img-responsive">
+			        <img class="filter dochange" src="work\dochange\img\tb.png" class="img-responsive">
+			        <img class="filter eventix" src="work\eventix\img\tb2.jpg" class="img-responsive">
+			        <img class="filter aac" src="work\corbion\img\view.jpg" class="img-responsive">
+			        <img class="filter intel" src="work\corbion\img\view.jpg" class="img-responsive">
 			      </div>
-			    </div-->		
-			    <!--Reach-->
-			    <div class="col-md-12 col-sm-12 co-xs-12 gal-item filter ucd">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="work\reach\img\lokaalplus.jpg" class="img-responsive">
-			        </a>
-			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <a href="work\reach\index.html"><img src="work\reach\img\lokaalplus.jpg"></a>
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the first one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div>
-			    <!--Eventix-->
-			    <!--div class="col-md-4 col-sm-6 co-xs-12 gal-item filter data">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#4">
-			          <img src="work/eventix/img/tb2.jpg">
-			        </a>
-			        <div class="modal fade" id="4" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <img src="work/aac/img/patient.jpg">
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the fourth one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div-->
-			   	<!--DoChange-->
-			    <div class="col-md-6 col-sm-6 co-xs-12 gal-item filter ucd">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#2">
-			          <img src="work\dochange\img\tb.jpg" style="background-color: black" class="img-responsive">
-			        </a>
-			        <div class="modal fade" id="2" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <a href="work/reach/index.html"><img src="http://nabeel.co.in/files/bootsnipp/gallery/2.jpg"></a>
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>De Kooktafel</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div>
-			    <!--HCUFU-->
-			    <div class="col-md-6 col-sm-6 co-xs-12 gal-item filter ucd">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#5">
-			          <img src="work/aac/img/patient.jpg">
-			        </a>
-			        <div class="modal fade" id="5" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/5.jpg">
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the fifth one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div>
-			    <!--Intel-->
-			    <!--div class="col-md-4 col-sm-6 co-xs-12 gal-item filter ucd">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#5">
-			          <img src="work/intel/img/tb.png">
-			        </a>
-			        <div class="modal fade" id="5" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <img src="http://nabeel.co.in/files/bootsnipp/gallery/5.jpg">
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the fifth one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div-->
-    		</div>
+			    </div>	
+			</div>
 		</div>
+		<div class="row" align="center" style="padding-bottom: 2em; border-color:#333">
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="smartdevice">Smartdevice for operators</button>
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="kooktafel">De Kooktafel</button>
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="dochange">Wearable Activity Dashboard</button>
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="eventix">Ticketshop Dashboard</button>
+            <button class="btn btn-default filter-button" style="color:#333" data-filter="aac">AAC service for ALS users</button>
+        </div>
 	</div>
 </section>
 
-<!-- About Section -->
+<!-- Skills Section -->
 <section id="skills" class="bg-black">
 	<div class="row" style="padding-top: 4em; padding-bottom: 0em">
         	<div class="col-lg-12 text-center">
@@ -295,14 +217,14 @@
 	                    <i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
 	                </span>
 	                <h4 class="service-heading" >Planning & Strategy</h4>
-	                <p class="text" >User-Centered Design, Stakeholder Management, Agile Orientation, Design Sprints</p>
+	                <p class="text" >User-Centered Design, User & Business requirement elicitation, Project Management</p>
 				</div>
 				<div class="col-lg-3 col-lg-offset-0 text-center" style="color:white">
 					 <span class="fa-stack fa-4x">
 	                    <i class="fa fa-users fa-stack-1x fa"></i>
 	                </span>
 	                <h4 class="service-heading">Research & Ideation</h4>
-	                <p class="text">Benchmarking, Contextual Task Analysis, Interviews, Personas</p>
+	                <p class="text">Benchmarking, Contextual Task Analysis, User Interviews, Personas, Brainstorming, Storyboarding</p>
 				</div>
 		<!--/div>
 		 <div class="row" style="border-color:white"-->
@@ -311,14 +233,14 @@
 	                    <i class="fa fa-rocket fa-stack-1x fa"></i>
 	                </span>
 	                <h4 class="service-heading">Prototype & Testing</h4>
-	                <p class="text">Electronics, Arduino, Programming, Axure, Usability Testing</p>
+	                <p class="text">Electronics, Programming, UI Prototyping, Tangible Prototyping, Interaction Design, Usability Testing</p>
 				</div>
 				<div class="col-lg-3 col-lg-offset-0 text-center" style="color:white">
 					 <span class="fa-stack fa-4x">
 	                    <i class="fa fa-line-chart fa-stack-1x fa"></i>
 	                </span>
 	                <h4 class="service-heading">Analysis & Reflection</h4>
-	                <p class="text">Signal Processing, Data Analytics, Data Visualization, Hypothesis Testing, Statistics</p>
+	                <p class="text">Signal processing, Pattern recognition, Data visualization, Hypothesis testing, Statistics</p>
 				</div>
 		</div>
 	</div>
