--- a/work/dochange/index.html
+++ b/work/dochange/index.html
@@ -63,68 +63,61 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<div class="row">
-					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">De Kooktafel: engage seniors to establish food-related habits</h2>
+					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">System status dashboard to help DoChange researchers to identify significant data loss</h1>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
 						<p class="text-left" style="font-size: 1.1em">
 							<b>Clients</b><br>
-							<a href="http://reach2020.eu"> Reach 2020 (Europe)</a><br>
-							<a href="">TU München (Germany)</a><br>
+							<a href="http://www.do-change.eu"> DoChange (Europe)</a><br>
+							<a href="https://onmi.design">Onmi (Netherlands)</a><br>
 							<a href="">TU Eindhoven (Netherlands)</a><br>
 							<br>
 							<b>Teamed up with</b><br>
-							Human-Factors Psychologist<br>
-							Industrial Designer<br>
-							Computer Scientist<br>
+							Cognitive Psychologist<br>
+							Neurobiologist<br>
 							<br>
-							<b>My role</b><br>
-							User Experience Designer<br>
-							<br>
-							<b>Date and duration</b><br>
-							2017, 4 weeks<br>
-							<br>
-							
 						</p>
 					</div>
 					<div class="col-sm-8">
+
 						<div class="row text-left">
 							<div class="col-md-4">
 							    <span class="fa-stack fa-3x">
 							       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							    	<i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
+							    	<i class="fa fa-search fa-stack-1x fa"></i>
 							    </span>
 							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Research</h4>
 							    <p style="color:#222; font-size: 1.1em">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p-->
 							     <p class="text-left" style="font-size: 1.1em">
-									<b>Strategy</b><br> 
-									Design sprint, Benchmarking
+									<b>Research</b><br> 
+									Benchmarking, Literature Review<br>	
 									<br>
 								</p>
 							</div> 
 							<div class="col-md-4">
 							    <span class="fa-stack fa-3x">
 							     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-users fa-stack-1x fa"></i>
+							        <i class="fa fa-rocket fa-stack-1x fa"></i>
 							    </span>
 							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Define & Ideate</h4>
 							    <p style="color:#222; font-size: 1.1em">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p-->
 							     <p class="text-left" style="font-size: 1.1em">
-									<b>Research</b><br> 
-									Contextual Inquiry, Interview, Task Analysis, Affinity Diagram<br>	
+									<b>Ideate, Prototype & Test</b><br> 
+									Brainstorming, Paper Prototype, Tableau<br>	
 									<br>
 								</p>
 							</div>
 							<div class="col-md-4">
 							    <span class="fa-stack fa-3x">
 							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-rocket fa-stack-1x fa"></i>
+							        <i class="fa fa-code fa-stack-1x fa"></i>
 							    </span>
 							   	<!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Prototype & Test</h4>
 							    <p style="color:#222`; font-size: 1.1em">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p-->
 							     <p class="text-left" style="font-size: 1.1em">
-									<b>Ideation, Prototype & Test</b><br> 
-									Sketch, Storyboard, Wizard of Oz, Usability Testing<br>	
+									<b>Coding</b><br> 
+									 C#, Javascript, D3.js, JSON, Git, Jupyter Notebook<br>	
 									<br>
 								</p>
 							</div>
@@ -169,49 +162,28 @@
 			<div class="col-lg-8 col-lg-offset-2 text-left">
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px; font-size:3em; ">What is it <b>about</b>?</h1>
 				<p>
-					 <!--Reach 2020 is an European Consortium that aims to help elderly by focusing on stimulating healthy eating among seniors.-->
-					 The stakeholders of the projects requested my team to research a particular group of seniors in Eindhoven. These seniors participate in a weekly cooking activity at the Summa College. Further more, the stakeholders asked my team to develop a digital prototype for a smart table that would aid seniors to cook and socialize. The interactive table, built by researchers of the Technical University of München, 
-					 <!--On this project, we worked for the European Consortium <b>Reach 2020</b>, in collaboration with the TU München and the TU Eindhoven.-->
+					The primary goal of the Do CHANGE project is to develop a health ecosystem for integrated disease management for hypertensive and cardiac patients. 
+				</p>
+				<iframe class="col-sm-12"  height="500" src="https://www.youtube.com/embed/igAVmWnbgds" frameborder="0" allowfullscreen></iframe>
+				<p>
+					The project includes a clinical trial that checks efficiency of the lifestyle change advice provided by researchers. Cardiac patients receive lifestyle advice, while their wearable devices collect activity data over up to 10 months.
 				</p>
 			</div>
 		</div>
 
-		<div class="row" style="border-color:white; padding-top: 30px">
-			<div class="container gal-container col-lg-8 col-lg-offset-2">
-			    <div class="col-md-12 col-sm-12 co-xs-12 gal-item">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="img/lokaalplus.jpg" class="img-responsive">
-			        </a>
-			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <img src="img/lokaalplus.jpg">
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the first one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div>
-			</div>
-		</div>
 
 		<!--What did we do?-->
 		<div class="row" style="padding-top: 30px">
 			<div class="col-lg-8 col-lg-offset-2 text-left">
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px; font-size:3em; ">What did <b>we do</b>?</h1>
-				<p>	During four weeks we did:
-					<b>contextual Task Analysis</b>of seniors during a cooking activity;
-					<b>qualitative data</b> clustering using <b>affinity diagram</b>;
-					Answer business questions with the <b>GV's design sprint</b>;
-					<b>Hi-Fi prototype</b> of a cooking-aid using an interactive table;
-					<b>user test</b> with 8 participants;
-					Ran three <b>iterations</b> of the design process.
+				<p>
+					My team's task was to develop a dashboard that shows trial participant's data and allow researchers to identify missing data in a glance. The information comes from different devices and multiple users. Researchers were interested to observe inter and intradaily data. 
+
+					<!--We had the following requirements:
+					Data from the different devices, per participant, intradaily
+					Verify integrity of data
+					Identify if the data is coming in, and what does it  look like
+					Technology stack: web interface, chart.js, d3.js for visualizations, MongoDB to handle data, Jupyter Notebooks as a documentation tool and Git for version control.-->
 				</p>
 			</div>
 		</div>
@@ -221,14 +193,14 @@
 			    <div class="col-md-12 col-sm-12 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="img/affinitydiagram.jpg" class="img-responsive">
+			          <img src="img/planning.jpg" class="img-responsive">
 			        </a>
 			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
 			          <div class="modal-dialog" role="document">
 			            <div class="modal-content">
 			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
 			              <div class="modal-body">
-			                <img src="img/affinitydiagram.jpg">
+			                <img src="img/planning.jpg">
 			              </div>
 			                <div class="col-md-12 description">
 			                  <h4>This is the first one on my Gallery</h4>
@@ -241,14 +213,14 @@
 			    <div class="col-md-6 col-sm-12 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="img/map.jpg" class="img-responsive">
+			          <img src="img/struct.jpg" class="img-responsive">
 			        </a>
 			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
 			          <div class="modal-dialog" role="document">
 			            <div class="modal-content">
 			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
 			              <div class="modal-body">
-			                <img src="img/map.jpg">
+			                <img src="img/struct.jpg">
 			              </div>
 			                <div class="col-md-12 description">
 			                  <h4>This is the first one on my Gallery</h4>
@@ -261,78 +233,14 @@
 			    <div class="col-md-6 col-sm-12 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="img/ideation.jpg" class="img-responsive">
+			          <img src="#" class="img-responsive">
 			        </a>
 			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
 			          <div class="modal-dialog" role="document">
 			            <div class="modal-content">
 			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
 			              <div class="modal-body">
-			                <img src="img/ideation.jpg">
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the first one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div>
-			</div>
-		</div>
-
-		<!--What did we achieve by the end of the project-->
-		<div class="row" style="padding-top: 30px">
-			<div class="col-lg-8 col-lg-offset-2 text-left">
-				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px">What did <b>we achieve</b> by the end of the project?</h1>
-				<p>
-					As a result, we came across with many insightful factors such as:<br><br>
-					1. the interactive table demands a lot of the user's visual process: the table's dimensions and the parallax perspective of items displayed diagonally on the table requires a lot of their peripheral vision;<br>
-					2. the screen projection should be dynamically adjusted to the presence of artifacts over the counter (ingredients, cutlery, boards, etc.);<br>
-					3. the cooking-aid feature must be flexible: users had different algorithms to execute the same task, and they were annoyed with the level of control during the trial;<br>
-					4. advanced cooks, requires only basic aid: ingredients list, measurements, recipes;<br>
-					5. users reported that seeing the photos of their friend's dishes would be an engaging factor in their food choices.<br><br>
-					The outcomes of the project are to be used in the next projects of Reach 2020 Consortium. As deliverables, we provided prototype files, design guidelines and a presentation about the design case's findings.
-					<!--At the end of the case, we provided a <b>prototype</b> to our stakeholders so that they can continue the next stage of the project. 
-					Reach Consortium have a prototype that can be applied in their context of use, like the Lokaal+ activity for instance.
-					From TU München side they were interested in the design implications that we <b>learned</b> by observing seniors using De Kooktafel during cooking activities.-->
-				</p>
-			</div>
-		</div>
-
-		<div class="row" style="border-color:white; padding-top: 30px">
-			<div class="container gal-container col-lg-10 col-lg-offset-1">
-			    <div class="col-md-6 col-sm-12 co-xs-12 gal-item filter ucd">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="img/usertest1.jpg" class="img-responsive">
-			        </a>
-			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <img src="img/usertest1.jpg">
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the first one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div>
-			    <div class="col-md-6 col-sm-12 co-xs-12 gal-item filter ucd">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="img/usertest2.jpg" class="img-responsive">
-			        </a>
-			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <img src="img/usertest2.jpg">
+			                <img src="#">
 			              </div>
 			                <div class="col-md-12 description">
 			                  <h4>This is the first one on my Gallery</h4>
@@ -350,43 +258,24 @@
 			<div class="col-lg-8 col-lg-offset-2 text-left">
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px">What was <b>my role</b> in this project</h1>
 				<p>
-					I executed contextual task analysis, acted as facilitator in one of the design sprints, developed Hi-Fi prototype, built and ran user test setup, shared project's results to stakeholders and gave a talk at the UXcampNL'17.
+					I acted as team facilitator, .
 				</p>
 			</div>
 		</div>
 
 		<div class="row" style="border-color:white; padding-top: 30px">
 			<div class="container gal-container col-lg-10 col-lg-offset-1">
-			    <div class="col-md-12 col-sm-12 co-xs-12 gal-item filter ucd">
+			    <div class="col-md-6 col-sm-12 co-xs-12 gal-item filter ucd">
 			      <div class="box">
 			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="img/group.png" class="img-responsive">
+			          <img src="img/team.png" class="img-responsive">
 			        </a>
 			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
 			          <div class="modal-dialog" role="document">
 			            <div class="modal-content">
 			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
 			              <div class="modal-body">
-			                <img src="img/group.png">
-			              </div>
-			                <div class="col-md-12 description">
-			                  <h4>This is the first one on my Gallery</h4>
-			                </div>
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-			    </div><div class="col-md-12 col-sm-12 co-xs-12 gal-item filter ucd">
-			      <div class="box">
-			        <a href="#" data-toggle="modal" data-target="#1">
-			          <img src="img/uxcamp1.jpg" class="img-responsive">
-			        </a>
-			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
-			          <div class="modal-dialog" role="document">
-			            <div class="modal-content">
-			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			              <div class="modal-body">
-			                <img src="img/uxcamp1.jpg">
+			                <img src="img/team.png">
 			              </div>
 			                <div class="col-md-12 description">
 			                  <h4>This is the first one on my Gallery</h4>
@@ -396,9 +285,64 @@
 			        </div>
 			      </div>
 			    </div>
-			    
 			</div>
 		</div>
+
+		<!--What did we achieve by the end of the project-->
+		<div class="row" style="padding-top: 30px">
+			<div class="col-lg-8 col-lg-offset-2 text-left">
+				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px">What did <b>we achieve</b> by the end of the project?</h1>
+				<p>
+				</p>
+			</div>
+		</div>
+
+		<div class="row" style="border-color:white; padding-top: 30px">
+			<div class="container gal-container col-lg-10 col-lg-offset-1">
+			    <div class="col-md-6 col-sm-12 co-xs-12 gal-item filter ucd">
+			      <div class="box">
+			        <a href="#" data-toggle="modal" data-target="#1">
+			          <img src="img/background.png" class="img-responsive">
+			        </a>
+			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
+			          <div class="modal-dialog" role="document">
+			            <div class="modal-content">
+			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+			              <div class="modal-body">
+			                <img src="img/background.png">
+			              </div>
+			                <div class="col-md-12 description">
+			                  <h4>This is the first one on my Gallery</h4>
+			                </div>
+			            </div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+			    <div class="col-md-6 col-sm-12 co-xs-12 gal-item filter ucd">
+			      <div class="box">
+			        <a href="#" data-toggle="modal" data-target="#1">
+			          <img src="img/dboverview.png" class="img-responsive">
+			        </a>
+			        <div class="modal fade" id="1" tabindex="-1" role="dialog">
+			          <div class="modal-dialog" role="document">
+			            <div class="modal-content">
+			                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+			              <div class="modal-body">
+			                <img src="img/dboverview.png">
+			              </div>
+			                <div class="col-md-12 description">
+			                  <h4>This is the first one on my Gallery</h4>
+			                </div>
+			            </div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+			</div>
+		</div>
+
+
 	</div>
 </section>
 
